# promptreg

./: README.md  pyproject.toml
examples/: demo.py
promptreg/: __init__.py  assertions.py  cli.py  core.py  report.py  snapshot.py
tests/: test_promptreg.py
