[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptreg"
version = "0.1.0"
description = "Pytest-style regression testing for prompts and LLM outputs: catch when a prompt or model change breaks your results."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["llm", "prompt engineering", "testing", "regression testing", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
notebook = ["ipython"]
dev = ["pytest>=7.0", "build", "twine"]

[project.scripts]
promptreg = "promptreg.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/promptreg"
Issues = "https://github.com/yourusername/promptreg/issues"

[tool.setuptools.packages.find]
include = ["promptreg*"]
